[package]
name = "path_resolver"
version = "0.2.5"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
description = "Provides a trie-based data structure to track and resolve relative path ownership across multiple packages"

[dependencies]
ahash.workspace = true
fs-err.workspace = true
indexmap.workspace = true
itertools.workspace = true
proptest.workspace = true
tempfile.workspace = true
tracing.workspace = true

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "path_resolver_bench"
harness = false
