[package]
name = "path_trie"
version = "0.1.0"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
fs-err.workspace = true
indexmap.workspace = true
itertools.workspace = true
tempfile.workspace = true
tracing.workspace = true
