[package]
name = "pyo3-rattler"
version = "0.3.0"
edition.workspace = true

[lib]
name = "pyo3_rattler"
path = "src/lib.rs"
test = false

[features]
default = ["native-tls"]
native-tls = [
    "rattler_networking/native-tls",
    "rattler_repodata_gateway/native-tls",
]
rustls-tls = [
    "rattler_networking/rustls-tls",
    "rattler_repodata_gateway/rustls-tls",
]
vendored-openssl = ["openssl", "openssl/vendored"]

[dependencies]
rattler = { path = "../rattler", default-features = false }
rattler_repodata_gateway = { path = "../rattler_repodata_gateway", default-features = false, features = [
    "sparse",
] }
rattler_conda_types = { path = "../rattler_conda_types", default-features = false }
rattler_digest = { path = "../rattler_digest" }
rattler_networking = { path = "../rattler_networking", default-features = false }
rattler_shell = { path = "../rattler_shell", default-features = false }
rattler_virtual_packages = { path = "../rattler_virtual_packages", default-features = false }
rattler_solve = { path = "../rattler_solve", default-features = false, features = [
    "resolvo",
] }
rattler_index = { path = "../rattler_index" }
rattler_lock = { path = "../rattler_lock", default-features = false }

anyhow = { workspace = true }
futures = { workspace = true }
openssl = { workspace = true, optional = true }
pep508_rs = { workspace = true }
pyo3 = { workspace = true, features = ["abi3-py38", "multiple-pymethods"] }
pyo3-asyncio = { workspace = true, features = ["tokio-runtime"] }
reqwest = { workspace = true, default-features = false }
reqwest-middleware = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
