[package]
name = "rattler-bin"
version = "0.1.0"
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "Rust binary for common Conda operations"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
default-run = "rattler"
publish = false

[[bin]]
name = "rattler"
path = "src/main.rs"

[features]
default = ["rustls-tls", "s3", "gcs"]
native-tls = [
  "reqwest/native-tls",
  "rattler/native-tls",
  "rattler_repodata_gateway/native-tls",
  "rattler_networking/native-tls",
  "rattler_cache/native-tls",
]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-native-roots",
  "rattler/rustls-tls",
  "rattler_repodata_gateway/rustls-tls",
  "rattler_networking/rustls-tls",
  "rattler_cache/rustls-tls",
]
s3 = ["rattler_networking/s3", "rattler_upload/s3"]
gcs = ["rattler_networking/gcs"]
sigstore-verify = ["dep:sigstore-verify", "dep:sigstore-trust-root"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
console = { workspace = true, features = ["windows-console-colors"] }
indicatif = { workspace = true }
miette = { workspace = true }
once_cell = { workspace = true }
rattler = { workspace = true, features = ["indicatif", "cli-tools"] }
rattler_conda_types = { workspace = true, default-features = false }
rattler_networking = { workspace = true, default-features = false, features = [
  "system-integration",
  "netrc-rs",
] }
rattler_repodata_gateway = { workspace = true, default-features = false, features = [
  "gateway",
] }
rattler_solve = { workspace = true, default-features = false, features = [
  "resolvo",
  "libsolv_c",
] }
rattler_virtual_packages = { workspace = true, default-features = false }
rattler_cache = { workspace = true, default-features = false }
rattler_menuinst = { workspace = true, default-features = false }
rattler_package_streaming = { workspace = true, default-features = false, features = [
  "reqwest",
] }
rattler_upload = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
itertools = { workspace = true }
url = { workspace = true }
sigstore-verify = { workspace = true, optional = true }
sigstore-trust-root = { workspace = true, optional = true }
serde_json = { workspace = true }
rattler_digest = { workspace = true }
sha2 = { workspace = true }

[package.metadata.release]
# Dont publish the binary
release = false
