[package]
name = "rattler"
version = "0.22.0"
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "Rust library to install conda environments"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
default = ['native-tls']
native-tls = ['reqwest/native-tls', 'rattler_package_streaming/native-tls']
rustls-tls = ['reqwest/rustls-tls', 'rattler_package_streaming/rustls-tls']
cli-tools = ['dep:clap']

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, optional = true }
digest = { workspace = true }
dirs = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
memchr = { workspace = true }
memmap2 = { workspace = true }
once_cell = { workspace = true }
rattler_conda_types = { path="../rattler_conda_types", version = "0.21.0", default-features = false }
rattler_digest = { path="../rattler_digest", version = "0.19.3", default-features = false }
rattler_networking = { path="../rattler_networking", version = "0.20.2", default-features = false }
rattler_shell = { path="../rattler_shell", version = "0.20.0", default-features = false }
rattler_package_streaming = { path="../rattler_package_streaming", version = "0.20.4", default-features = false, features = ["reqwest"] }
reflink-copy = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["stream", "json", "gzip"] }
reqwest-middleware = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "io-util", "macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }

[dev-dependencies]
assert_matches = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
tracing-test = { workspace = true }
insta = { workspace = true, features = ["yaml"] }
rattler_lock = { path = "../rattler_lock" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tower = { workspace = true, features = ["util"] }
