[package]
name = "rattler_cache"
version = "0.3.17"
description = "A crate to manage the caching of data in rattler"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true

[dependencies]
fs2 = "0.4"
filetime = "0.2"

[target.'cfg(not( target_arch = "wasm32" ))'.dependencies]
anyhow.workspace = true
dashmap.workspace = true
dirs.workspace = true
futures.workspace = true
fs-err.workspace = true
fs4 = { workspace = true, features = ["fs-err3-tokio", "tokio"] }
fxhash.workspace = true
itertools.workspace = true
parking_lot.workspace = true
rattler_conda_types = { version = "0.32.0", path = "../rattler_conda_types", default-features = false }
rattler_digest = { version = "1.1.1", path = "../rattler_digest", default-features = false }
rattler_networking = { version = "0.22.12", path = "../rattler_networking", default-features = false }
rattler_package_streaming = { version = "0.22.36", path = "../rattler_package_streaming", default-features = false, features = ["reqwest"] }
reqwest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
url.workspace = true
thiserror.workspace = true
reqwest-middleware.workspace = true
digest.workspace = true
simple_spawn_blocking = { version = "1.1.0", path = "../simple_spawn_blocking", features = ["tokio"] }
rayon = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_matches.workspace = true
axum.workspace = true
bytes.workspace = true
futures.workspace = true
rstest.workspace = true
tokio-stream.workspace = true
tower-http = { workspace = true, features = ["fs"] }
tools = { path = "../tools" }
reqwest-retry = { workspace = true }
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
