[package]
name = "rattler_cache"
version = "0.6.12"
description = "A crate to manage the caching of data in rattler"
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme.workspace = true

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls", "reqwest-middleware/rustls-tls", "rattler_networking/rustls-tls", "rattler_package_streaming/rustls-tls"]
native-tls = ["reqwest/native-tls", "rattler_networking/native-tls", "rattler_package_streaming/native-tls"]

[dependencies]

[target.'cfg(not( target_arch = "wasm32" ))'.dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
fs-err = { workspace = true }
fs4 = { workspace = true, features = ["fs-err3-tokio", "tokio"] }
itertools = { workspace = true }
parking_lot = { workspace = true }
rattler_conda_types = { workspace = true, default-features = false }
rattler_digest = { workspace = true, default-features = false }
rattler_redaction = { workspace = true, default-features = false }
rattler_networking = { workspace = true, default-features = false }
rattler_package_streaming = { workspace = true, default-features = false, features = ["reqwest"] }
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
reqwest-middleware = { workspace = true }
digest = { workspace = true }
simple_spawn_blocking = { workspace = true, features = ["tokio"] }
rayon = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
rstest = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
tools = { path = "../tools" }
reqwest-retry = { workspace = true }
