[package]
name = "rattler_config"
version = "0.1.0"
edition.workspace = true
authors = []
description = "A crate to configure rattler and derived tools."
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
# feature to get default configuration directories for pixi
pixi = ["dirs"]
edit = []
default = ["pixi", "edit"]


[dependencies]
console = { workspace = true }
thiserror = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
rattler_conda_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
dirs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
