[package]
name = "rattler_config"
version = "0.3.0"
edition.workspace = true
authors = []
description = "A crate to configure rattler and derived tools."
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[features]
edit = []
default = ["edit"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
console = { workspace = true }
thiserror = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
rattler_conda_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
