[package]
name = "rattler_digest"
version.workspace = true
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "An simple crate used by rattler crates to compute different hashes from different sources"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
digest = "0.10.7"
tokio = { version = "1.28.2", features = ["io-util"], optional = true }
hex = "0.4.3"
serde = { version = "1.0.163", features = ["derive"], optional = true }
sha2 = "0.10.6"
md-5 = "0.10.5"
serde_with = "3.0.0"

[features]
tokio = ["dep:tokio"]
serde = ["dep:serde"]

[dev-dependencies]
rstest = "0.17.0"
tempfile = "3.6.0"
md-5 = "0.10.5"
serde_json = "1.0.96"
