[package]
name = "rattler_digest"
version.workspace = true
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "An simple crate used by rattler crates to compute different hashes from different sources"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
blake2 = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
md-5 = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["io-util"], optional = true }

[features]
tokio = ["dep:tokio"]
serde = ["dep:serde"]

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3.8.0"
md-5 = "0.10.6"
serde_json = "1.0.107"
