[package]
name = "rattler_digest"
version = "1.1.6"
edition.workspace = true
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
description = "An simple crate used by rattler crates to compute different hashes from different sources"
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
blake2 = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }
md-5 = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["io-util"], optional = true }
url = { workspace = true }
generic-array = { workspace = true, optional = true }

[features]
tokio = ["dep:tokio"]
serde = ["dep:serde", "generic-array/serde"]

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
md-5 = { workspace = true }
serde_json = { workspace = true }
